# forwarding-oauth2-server

./: CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  pre_release.sh  release.toml  test_coverage.sh  third-party-licenses.html
.github/workflows/: test.yml
examples/: annis-token-template.json  annis.toml
scripts/: about.hbs  pre_release.sh
src/: api.rs  default-settings.toml  default-token-template.json  errors.rs  jwt.rs  main.rs  settings.rs  state.rs
src/api/: template-with-groups.json  template-with-header.json  tests.rs
