[package]
authors = ["Thomas Krause"]
edition = "2018"
license = "Apache-2.0"
name = "shibboleth-oauth2-forwarding"
repository = "https://github.com/korpling/shibboleth-oauth2-forwarding"
version = "0.1.0"

[dependencies]
actix-web = "3"
actix-web-actors = "3"
clap = "2"
config = "0.11"
log = "0.4"
oxide-auth = "0.5"
oxide-auth-actix = "0.1"
oxide-auth-async = "0.1"
serde = {version = "1", features = ["derive"]}
simplelog = "0.10"
thiserror = "1"
url = "2"
jsonwebtoken = "7.2"
tempfile = "3.2"
toml = "0.5"

[dev-dependencies]
actix-rt = "2"
serde_json = "1"
