[package]
authors = ["Thomas Krause"]
edition = "2018"
license = "Apache-2.0"
name = "shibboleth-oauth2-forwarding"
repository = "https://github.com/korpling/shibboleth-oauth2-forwarding"
version = "0.1.0"

[dependencies]
actix-web = "3"
clap = "2"
config = "0.11"
handlebars = "4"
jsonwebtoken = "7.2"
log = "0.4"
oxide-auth = "0.5"
oxide-auth-actix = "0.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
simplelog = "0.10"
tempfile = "3.2"
thiserror = "1"
toml = "0.5"
url = "2"

[dev-dependencies]
actix-rt = "2"
chrono = "0.4"
