[package]
authors = ["Thomas Krause"]
edition = "2018"
license = "Apache-2.0"
name = "forwarding-oauth2-server"
repository = "https://github.com/korpling/forwarding-oauth2-server"
version = "0.2.0"
description = """
This is a server that creates an OAuth2 Server (identity provider). 
It assumes it runs behind as protected resource (e.g. by securing it with AuthType shibboleth in an Apache 2 server). 
Shibboleth/SAML meta data fields that are passed through as HTTP headers (like X-Remote-User) variables can be mapped to JWT token attributes.
"""

[dependencies]
actix-web = "4"
clap = "3"
config = "0.11"
handlebars = "4"
jsonwebtoken = "8.1"
log = "0.4"
oxide-auth = "0.5"
oxide-auth-actix = "0.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
simplelog = "0.12"
tempfile = "3.2"
thiserror = "1"
toml = "0.5"
url = "2"

[dev-dependencies]
actix-rt = "2"
time = "0.3"
